Update JavaCalculator02.java
Made changes for Java 25